# rs-pinocchio

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
cpp/: pinocchio_shim.cpp  pinocchio_shim.h
src/: error.rs  ffi.rs  lib.rs  model.rs
src/placo/: mod.rs
src/placo/dynamics/: contacts.rs  mod.rs  more_tasks.rs  relative_tasks.rs  solver.rs  task.rs  tasks.rs
src/placo/humanoid/: dummy_walk.rs  footsteps.rs  humanoid_robot.rs  kick.rs  lipm.rs  mod.rs  parameters.rs  side.rs  swing_foot.rs  walk_pattern_generator.rs  walk_tasks.rs
src/placo/kinematics/: constraints.rs  mod.rs  more_tasks.rs  relative_tasks.rs  solver.rs  task.rs  tasks.rs  wheel_task.rs
src/placo/model/: mod.rs  robot_wrapper.rs
src/placo/problem/: constraint.rs  error.rs  expression.rs  integrator.rs  mod.rs  polygon_constraint.rs  problem.rs  problem_polynom.rs  sparsity.rs  variable.rs
src/placo/tools/: axises_mask.rs  cubic_spline.rs  cubic_spline_3d.rs  directions.rs  mod.rs  polynom.rs  prioritized.rs  segment.rs  utils.rs
tests/: dynamics_solver.rs  humanoid_robot.rs  kinematics.rs  kinematics_extra.rs  kinematics_solver.rs  robot_wrapper.rs  walk_pipeline.rs
