[package]
name = "pinocchio-rs"
version = "4.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Clean-room Rust bindings for the Pinocchio rigid-body dynamics library. Crate version tracks the bound Pinocchio version (4.1.0)."
repository = "https://github.com/AstroRoboticsTech/pinocchio-rs"
readme = "README.md"
links = "pinocchio_shim"

[dependencies]
cxx = "1"
nalgebra = "0.33"
thiserror = "2"
tracing = { version = "0.1", optional = true }

[build-dependencies]
cxx-build = "1"
pkg-config = "0.3"

[features]
default = []
# Emit tracing spans/events from the safe wrapper.
trace = ["dep:tracing"]
