[package]
name = "rs-pinocchio"
version = "4.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Clean-room Rust bindings (cxx) for the Pinocchio rigid-body dynamics library — forward kinematics + frame Jacobians. Crate version tracks the bound Pinocchio version (4.1.0)."
repository = "https://github.com/AstroRoboticsTech/rs-pinocchio"
keywords = ["pinocchio", "robotics", "kinematics", "jacobian", "ffi"]
categories = ["science::robotics", "api-bindings"]
readme = "README.md"
links = "pinocchio_shim"

[dependencies]
cxx = "1"
nalgebra = "0.33"
thiserror = "2"
tracing = { version = "0.1", optional = true }

[build-dependencies]
cxx-build = "1"
pkg-config = "0.3"

[features]
default = []
# Emit tracing spans/events from the safe wrapper.
trace = ["dep:tracing"]
